--- a/Exercises/Iterations In Python.ipynb
+++ b/Exercises/Iterations In Python.ipynb
@@ -211,6 +211,72 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2 4 8 16 32 64 128 256 512 "
+     ]
+    }
+   ],
+   "source": [
+    "for n in range(10):\n",
+    "    print(2 ** n, end = \" \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 Odd 2 Odd 4 Odd 6 Odd 8 Odd 10 Odd 12 Odd 14 Odd 16 Odd 18 Odd "
+     ]
+    }
+   ],
+   "source": [
+    "for x in range(20):\n",
+    "    if x % 2 == 0:\n",
+    "        print(x, end = \" \")\n",
+    "    else:\n",
+    "        print(\"Odd\", end = \" \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = [0,1,2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 1 2 "
+     ]
+    }
+   ],
+   "source": [
+    "for item in x:\n",
+    "    print(item, end = \" \")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
