--- a/Exercises/Iterations In Python.ipynb
+++ b/Exercises/Iterations In Python.ipynb
@@ -277,6 +277,100 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 1 2 "
+     ]
+    }
+   ],
+   "source": [
+    "for item in range(len(x)):\n",
+    "    print(x[item], end = \" \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def count(numbers):\n",
+    "    total = 0\n",
+    "    for x in numbers:\n",
+    "        if x < 20:\n",
+    "            total += 1\n",
+    "    return total"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list_1 = [1,3,7,15,23,43,56,98,17]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "count(list_1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "74\n"
+     ]
+    }
+   ],
+   "source": [
+    "Prices = {\n",
+    "    \"Box of Spaggetti\": 4,\n",
+    "    \"Lasagna\": 5,\n",
+    "    \"Hamburger\": 2\n",
+    "}\n",
+    "Quantity = {\n",
+    "    \"Box of Spaggetti\": 6,\n",
+    "    \"Lasagna\": 10,\n",
+    "    \"Hamburger\": 0\n",
+    "}\n",
+    "\n",
+    "money_spent = 0\n",
+    "\n",
+    "for i in Prices:\n",
+    "    money_spent = money_spent + (Prices[i] * Quantity[i])\n",
+    "    \n",
+    "print (money_spent)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
