additional search and data aggregation functions with yahoo finance

--- a/Exercises/Data Aggregation from Yahoo Finance.ipynb
+++ b/Exercises/Data Aggregation from Yahoo Finance.ipynb
@@ -273,16 +273,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "PG = wb.DataReader('PG', data_source='yahoo', start='2020-1-1')"
+    "T = wb.DataReader('PG', data_source='yahoo', start='2020-1-1')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -589,13 +589,13 @@
        "2020-02-04  125.660004  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "PG"
+    "T"
    ]
   },
   {
@@ -1544,6 +1544,347 @@
       ]
      },
      "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_data.tail()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Importing and organizing data- IEX"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pandas_datareader import data as wb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PG = wb.DataReader('PG', data_source = 'yahoo', start = '1995-01-01')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Open</th>\n",
+       "      <th>Close</th>\n",
+       "      <th>Volume</th>\n",
+       "      <th>Adj Close</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>1995-01-03</td>\n",
+       "      <td>15.625000</td>\n",
+       "      <td>15.437500</td>\n",
+       "      <td>15.468750</td>\n",
+       "      <td>15.593750</td>\n",
+       "      <td>3318400.0</td>\n",
+       "      <td>6.362394</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1995-01-04</td>\n",
+       "      <td>15.656250</td>\n",
+       "      <td>15.312500</td>\n",
+       "      <td>15.531250</td>\n",
+       "      <td>15.468750</td>\n",
+       "      <td>2218800.0</td>\n",
+       "      <td>6.311395</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1995-01-05</td>\n",
+       "      <td>15.437500</td>\n",
+       "      <td>15.218750</td>\n",
+       "      <td>15.375000</td>\n",
+       "      <td>15.250000</td>\n",
+       "      <td>2319600.0</td>\n",
+       "      <td>6.222139</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1995-01-06</td>\n",
+       "      <td>15.406250</td>\n",
+       "      <td>15.156250</td>\n",
+       "      <td>15.156250</td>\n",
+       "      <td>15.281250</td>\n",
+       "      <td>3438000.0</td>\n",
+       "      <td>6.234891</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1995-01-09</td>\n",
+       "      <td>15.406250</td>\n",
+       "      <td>15.187500</td>\n",
+       "      <td>15.343750</td>\n",
+       "      <td>15.218750</td>\n",
+       "      <td>1795200.0</td>\n",
+       "      <td>6.209391</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2020-01-29</td>\n",
+       "      <td>126.070000</td>\n",
+       "      <td>125.029999</td>\n",
+       "      <td>125.910004</td>\n",
+       "      <td>125.059998</td>\n",
+       "      <td>5271000.0</td>\n",
+       "      <td>125.059998</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2020-01-30</td>\n",
+       "      <td>126.059998</td>\n",
+       "      <td>124.419998</td>\n",
+       "      <td>124.790001</td>\n",
+       "      <td>125.949997</td>\n",
+       "      <td>5894400.0</td>\n",
+       "      <td>125.949997</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2020-01-31</td>\n",
+       "      <td>126.949997</td>\n",
+       "      <td>124.459999</td>\n",
+       "      <td>125.989998</td>\n",
+       "      <td>124.620003</td>\n",
+       "      <td>6612900.0</td>\n",
+       "      <td>124.620003</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2020-02-03</td>\n",
+       "      <td>125.949997</td>\n",
+       "      <td>124.489998</td>\n",
+       "      <td>124.660004</td>\n",
+       "      <td>125.110001</td>\n",
+       "      <td>6052300.0</td>\n",
+       "      <td>125.110001</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2020-02-04</td>\n",
+       "      <td>127.349998</td>\n",
+       "      <td>125.360001</td>\n",
+       "      <td>125.709999</td>\n",
+       "      <td>125.660004</td>\n",
+       "      <td>5919268.0</td>\n",
+       "      <td>125.660004</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>6317 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  High         Low        Open       Close     Volume  \\\n",
+       "Date                                                                    \n",
+       "1995-01-03   15.625000   15.437500   15.468750   15.593750  3318400.0   \n",
+       "1995-01-04   15.656250   15.312500   15.531250   15.468750  2218800.0   \n",
+       "1995-01-05   15.437500   15.218750   15.375000   15.250000  2319600.0   \n",
+       "1995-01-06   15.406250   15.156250   15.156250   15.281250  3438000.0   \n",
+       "1995-01-09   15.406250   15.187500   15.343750   15.218750  1795200.0   \n",
+       "...                ...         ...         ...         ...        ...   \n",
+       "2020-01-29  126.070000  125.029999  125.910004  125.059998  5271000.0   \n",
+       "2020-01-30  126.059998  124.419998  124.790001  125.949997  5894400.0   \n",
+       "2020-01-31  126.949997  124.459999  125.989998  124.620003  6612900.0   \n",
+       "2020-02-03  125.949997  124.489998  124.660004  125.110001  6052300.0   \n",
+       "2020-02-04  127.349998  125.360001  125.709999  125.660004  5919268.0   \n",
+       "\n",
+       "             Adj Close  \n",
+       "Date                    \n",
+       "1995-01-03    6.362394  \n",
+       "1995-01-04    6.311395  \n",
+       "1995-01-05    6.222139  \n",
+       "1995-01-06    6.234891  \n",
+       "1995-01-09    6.209391  \n",
+       "...                ...  \n",
+       "2020-01-29  125.059998  \n",
+       "2020-01-30  125.949997  \n",
+       "2020-01-31  124.620003  \n",
+       "2020-02-03  125.110001  \n",
+       "2020-02-04  125.660004  \n",
+       "\n",
+       "[6317 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "PG"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tickers = ['PG', 'MSFT', 'T', 'F', 'GE']\n",
+    "new_data = pd.DataFrame()\n",
+    "for t in tickers:\n",
+    "    new_data[t] = wb.DataReader(t, data_source='yahoo', start='2015-1-1')['Close']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PG</th>\n",
+       "      <th>MSFT</th>\n",
+       "      <th>T</th>\n",
+       "      <th>F</th>\n",
+       "      <th>GE</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>2020-01-29</td>\n",
+       "      <td>125.059998</td>\n",
+       "      <td>168.039993</td>\n",
+       "      <td>37.049999</td>\n",
+       "      <td>8.86</td>\n",
+       "      <td>12.94</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2020-01-30</td>\n",
+       "      <td>125.949997</td>\n",
+       "      <td>172.779999</td>\n",
+       "      <td>37.430000</td>\n",
+       "      <td>8.84</td>\n",
+       "      <td>12.73</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2020-01-31</td>\n",
+       "      <td>124.620003</td>\n",
+       "      <td>170.229996</td>\n",
+       "      <td>37.619999</td>\n",
+       "      <td>8.82</td>\n",
+       "      <td>12.45</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2020-02-03</td>\n",
+       "      <td>125.110001</td>\n",
+       "      <td>174.380005</td>\n",
+       "      <td>36.959999</td>\n",
+       "      <td>8.98</td>\n",
+       "      <td>12.26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2020-02-04</td>\n",
+       "      <td>125.660004</td>\n",
+       "      <td>180.119995</td>\n",
+       "      <td>37.630001</td>\n",
+       "      <td>9.18</td>\n",
+       "      <td>12.58</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    PG        MSFT          T     F     GE\n",
+       "Date                                                      \n",
+       "2020-01-29  125.059998  168.039993  37.049999  8.86  12.94\n",
+       "2020-01-30  125.949997  172.779999  37.430000  8.84  12.73\n",
+       "2020-01-31  124.620003  170.229996  37.619999  8.82  12.45\n",
+       "2020-02-03  125.110001  174.380005  36.959999  8.98  12.26\n",
+       "2020-02-04  125.660004  180.119995  37.630001  9.18  12.58"
+      ]
+     },
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
